# gst-fluendo-mp3

./: .projectinfo  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.orig  gst-fluendo-mp3.spec  gst-fluendo-mp3.spec.in
common/: Makefile.in
common/m4/: Makefile.in
debian/: changelog  control  copyright  rules  strip-ipp.diff  watch
src/: Makefile.am  Makefile.in  bitstream.c  bitstream.h  common.c  common.h  decode.c  decode.h  flump3dec-0_10.c  flump3dec-1_0.c  flump3dec.c  flump3dec.h  mp3-c-synth.c  mp3-c.c  mp3-c.h  mp3-cos-tables.h  mp3tl-priv.h  mp3tl.c  mp3tl.h  table-bitalloc.h  table-dewindow.h  table-huffdec.h  table-powtable-2.h  table-powtable.h
util/: Makefile.in
win32/: Makefile.am  Makefile.in
win32/include/: Makefile.in  config-orig.h.in
win32/oa/: Makefile.in  libgstflump3dec.vcproj  libgstflump3dec_ossbuild.vcproj
win32/vs10/: Makefile.am  Makefile.in  libgstflump3dec_sdk.vcxproj  libgstflump3dec_sdk.vcxproj.filters
win32/vs9/: Makefile.am  Makefile.in  config.h  libgstflump3dec.vcproj  libgstflump3dec_ossbuild.vcproj
